welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:17: error: not found: value sortietrouvee
    sortietrouvee()="True"
    ^