welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var pascouloir = 0
var nbcookie = 0
while (sortieTrouvee()!="False") {
  nbcookie = 0;
  for (pascouloir <- 1 to 5) {
    avance();
    if (estSurBiscuit()) {
      nbcookie = nbcookie + 1;
    };
  }
  if (nbcookie<3) {
    droite();
  } else {
    gauche();
  }
  if (getCouleurSol()=="yellow") {
    sortietrouvee()="True"
    avance()
  }
}